[package]
name = "js_version_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "5.0.1"
swc_ecma_ast = "5.1.0"
swc_ecma_parser = "7.0.0"
swc_ecma_visit = "5.0.0"
log = "0.4"
env_logger = "0.11.3"
strum = "0.26.2"
strum_macros = "0.26.2"
clap = { version = "4.5.4", features = ["cargo", "color"] }
thiserror = "1.0.59"

# Library configuration
[lib]
name = "js_version_checker_lib"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "js_version_checker"
path = "src/main.rs"